--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         	<span class="moves"></span> Moves
 
+            <span class="timer">0 mins 0 secs</span>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
@@ -31,6 +33,22 @@
 
         <ul class="deck">
 
+
+            <div id="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>
+                <strong>Congratulations! You have finished the game! Please review your score and rating stars.</strong>
+            </h3>
+            <p>Number of Moves:
+                <span class="total-moves">0</span> </p>
+             <p>Number of Stars:
+                 <span class="rating-stars">3</span> </p>
+            <p>Total Time:
+                <span class="total-time">0 mins 0 secs</span>
+            </p>
+            <button class="play-game" onclick="playGame()">Start The Game Again!</button>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
